added the first blog

--- a/2ndindex.html
+++ b/2ndindex.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h2>My first website containing scriptures</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio minima numquam perferendis nostrum sequi adipisci unde, corporis aspernatur dolorem laudantium deleniti maiores nemo hic voluptatum. Excepturi laborum culpa suscipit fuga ipsam sint debitis alias, enim exercitationem inventore facilis quam quasi officiis reprehenderit molestiae. Officia quae maxime cum rem repellendus, quisquam temporibus aliquid facere eum beatae veniam harum maiores, aut iusto nulla quos ullam placeat tempora odit, unde magnam quaerat sed nobis? Deserunt repellendus assumenda adipisci sequi? Odio reprehenderit iusto ad fuga repellat obcaecati quod excepturi aliquam veniam in, sapiente, vitae voluptates vero minima neque totam enim est beatae tenetur consequatur!</p>
+    </div>
     
 </body>
 </html>
