--- a/2ndindex.html
+++ b/2ndindex.html
@@ -11,6 +11,14 @@
         <h2>My first website containing scriptures</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio minima numquam perferendis nostrum sequi adipisci unde, corporis aspernatur dolorem laudantium deleniti maiores nemo hic voluptatum. Excepturi laborum culpa suscipit fuga ipsam sint debitis alias, enim exercitationem inventore facilis quam quasi officiis reprehenderit molestiae. Officia quae maxime cum rem repellendus, quisquam temporibus aliquid facere eum beatae veniam harum maiores, aut iusto nulla quos ullam placeat tempora odit, unde magnam quaerat sed nobis? Deserunt repellendus assumenda adipisci sequi? Odio reprehenderit iusto ad fuga repellat obcaecati quod excepturi aliquam veniam in, sapiente, vitae voluptates vero minima neque totam enim est beatae tenetur consequatur!</p>
     </div>
+    <div>
+        <h2>My second blog</h2>
+        <p>Infuse your life with action. Don't wait for it to happen. Make it happen. Make your own future. Make your own hope. Make your own love. And whatever your beliefs, honor your creator, not by passively waiting for grace to come down from upon high, but by doing what you can to make grace happen... yourself, right now, right down here on Earth.</p>
+    </div>
+    <div>
+        <h2>My third blog</h2>
+        <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.</p>
+    </div>
     
 </body>
 </html>
