--- a/2ndindex.html
+++ b/2ndindex.html
@@ -19,6 +19,14 @@
         <h2>My third blog</h2>
         <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. And the only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.</p>
     </div>
+    <div>
+        <h2>How to push incremental code</h2>
+        <ol>
+            <li>git add .</li>
+            <li>git commit -m"added the following code or things or messages"</li>
+            <li>git push</li>
+        </ol>
+    </div>
     
 </body>
 </html>
